<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Griffin for XMPP</string>
    <string name="app_name_short">Griffin</string>
    <string name="send_file">Send file</string>
    <string name="chats">Chats</string>
    <string name="sending">Sending</string>
    <string name="in_queue">In queue</string>
    <string name="error">Error</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="you_have_received_a_request_for_authorization_from_the_user">you have received a request for authorization from the user</string>
    <string name="auth_was_cancelled">Auth request from %1$s was cancelled</string>
    <string name="contact_card">Contact card</string>
    <string name="to_chat">Go to chat</string>
    <string name="chat">Chat</string>
    <string name="user_not_authorized">User not authorized</string>
    <string name="send_a_request">Send a request</string>
    <string name="delete">Delete</string>
    <string name="delete_from_contact_list">Delete from contact list</string>
    <string name="add_contact">Add contact</string>
    <string name="open_profile">Open profile</string>
    <string name="select_target_account">Select target account</string>
    <string name="cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="enter_the_message_text">Enter the message text</string>
    <string name="deleted">Deleted</string>
    <string name="unable_to_delete_contact">Unable to delete contact</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_host"><b>Server host</b></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="read_terms_and_conditions">Read Terms and Conditions</string>
    <string name="enter_your_password"><b>Enter your password</b></string>
    <string name="login"><b>Login</b></string>
    <string name="server_address">Server address</string>
    <string name="accounts">Accounts</string>
    <string name="notifications">Notifications</string>
    <string name="add_new_account">Add new account</string>
    <string name="income_messages">Income messages</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="light">Light</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="enable">Enable</string>
    <string name="ringtone">Ringtone</string>
    <string name="new_income_message">New income message</string>
    <string name="new_subscriptions">New subscriptions</string>
    <string name="change_avatar">Change avatar</string>
    <string name="account">Account</string>
    <string name="account_deleting_title">Account deleting</string>
    <string name="account_deleting_summary">Are you sure you want to delete the account and all locally stored message history? This action can not be undone.</string>
    <string name="income_files">Income files</string>
    <string name="file_transfer">File transfer</string>

    <string name="permission_granted_text">Permission successfully granted. Repeat again.</string>
    <string name="permission_is_not_granted_text">A permit is not received. Action can not be executed.</string>
    <string name="cancelled">Cancelled</string>
    <string name="open_file">Open file</string>
    <string name="file_not_found">File not found</string>
    <string name="app_for_file_not_found_message">There was no application that can open this type of file</string>
    <string name="fill_in_this_field">Fill in this field</string>
    <string name="enter_dir_name">Enter new directory name</string>
    <string name="file_explorer">File explorer</string>
    <string name="select_directory">Select directory</string>
    <string name="select_file">Select file</string>
    <string name="create_dir">Create new directory</string>
    <string name="directory_is_empty">Directory is empty</string>
    <string name="path_not_exist">The path does not exist or can not be read</string>
    <string name="unable_to_open_file_explorer">Unable to open file explorer</string>
    <string name="no_photos">No photos</string>
    <string name="photos">Photos</string>
    <string name="unable_to_send_message">Unable to send message</string>
    <string name="press_button_for_recording">Press button for recording</string>
    <string name="send">Send</string>
    <string name="send_key">Send key</string>
    <string name="you_have_no_active_chats">You have no active chats</string>
    <string name="hide">Hide</string>
    <string name="messages_count">%1$d messages</string>
    <string name="files_count">%1$d files</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_chat_confiramtion">Are you sure you want to delete all messages in this chat?</string>
    <string name="delete_messages_confiramtion">Are you sure you want to delete the marked messages?</string>
    <string name="sign_up">Sign up</string>
    <string name="password_again">Password again</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="user_avatar">User avatar</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change password</string>
    <string name="saving_title">Saving</string>
    <string name="apply_changes">Apply changes</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="saved">Saved</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="confirm">Confirm</string>

    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>

    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>

    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>

    <string name="mtm_notification">Certificate Verification</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="enter_nickname">Enter a nickname</string>
    <string name="nickname">Nickname</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save_changes_question">Save changes?</string>
    <string name="request_has_been_sent">Request has been sent</string>
    <string name="you_have_no_contacts">You have no contacts</string>
    <string name="income_message_subscribe_text">Allow user %1$s to add you as a contact list?</string>
    <string name="out_message_subscribe_text">You have sent a request to the user %1$s</string>
    <string name="income_message_subscribed_text">User %1$s accepted your request</string>
    <string name="out_message_subscribed_text">You have confirmed the authorization request for the user %1$s</string>
    <string name="out_message_unsubscribe_text">You canceled subscription user %1$s</string>
    <string name="income_message_unsubscribe_text">User %1$s unsubscribed</string>
    <string name="out_message_unsubscribed_text">You have requested the user %1$s unsubscribe</string>
    <string name="income_message_unsubscribed_text">User %1$s sent a request to unsubscribe</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="other">Other</string>
    <string name="security">Security</string>
    <string name="pincode">Pin code</string>
    <string name="not_request_pin_code">not request a PIN code</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_current_pincode">Enter current PIN</string>
    <string name="enter_new_pincode">Enter new PIN</string>
    <string name="enter_new_pin_code_again">Enter the new PIN code again</string>
    <string name="please_wait">Please wait</string>
    <string name="registration">Registration</string>
    <string name="repeat">Repeat</string>
    <string name="income_file">Income file</string>
    <string name="files">Files</string>
    <string name="show_income_files">Show income files</string>
    <string name="unable_to_delete_file">Unable to delete file</string>
    <string name="send_file_in_this_chat_question">Send a file in this chat?</string>
    <string name="save_changes">Save changes</string>
    <string name="saving_changes">Saving changes</string>
    <string name="message_encrypted">Message wasEncrypted</string>
    <string name="outgoing_file">Outgoing file</string>
    <string name="to_start_connecting_necessary_key_exchange">To start connecting with %1$s necessary key exchange</string>
    <string name="user_requests_key_exchange">User requests %1$s key exchange</string>
    <string name="otr_fallback_message">Off-the-Record private conversation has been requested but you do not have a supportive this.</string>
    <string name="session_state">Session state</string>
    <string name="otr_session_does_not_active">OTR session does not active. Please, start OTR session</string>
    <string name="start_session">Start session</string>
    <string name="refresh_session">Refresh session</string>
    <string name="end_session">End session</string>
    <string name="available">Available</string>
    <string name="away">Away</string>
    <string name="ready_for_chat">Ready for chat</string>
    <string name="dnd">Do tot disturb</string>
    <string name="xa">Away for an extended period of time</string>
    <string name="unavailable">Unavailable</string>
    <string name="login_example">login@example.org</string>
    <string name="invalid_user_login">Invalid user login</string>
    <string name="dialog_day_older">Older</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">10 days</string>
    <string name="click_back_to_exit">Click back to exit</string>
    <string name="type_your_message">Type your message…</string>
    <string name="recording_time">Recording… %1$s</string>
    <string name="chat_is_not_ready_yet">Chat is not ready yet</string>
</resources>