<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="?textColorPrimary"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/host"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/server_address"
            android:inputType="textVisiblePassword"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textVisiblePassword"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_again"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_again"
            android:inputType="textWebPassword"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/sign_me_up" />

    </LinearLayout>


</LinearLayout>