<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="256dp"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/dialog_change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/old_password"
        android:inputType="textWebPassword"
        android:minHeight="40dp"
        android:textColorHint="#ff9c9c9c"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dialog_change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password"
        android:inputType="textWebPassword"
        android:minHeight="40dp"
        android:textColorHint="#ff9c9c9c"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dialog_change_password_new_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password_again"
        android:inputType="textWebPassword"
        android:minHeight="40dp"
        android:textColorHint="#ff9c9c9c"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textAllCaps="true" />

</LinearLayout>