<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#FFF"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_short"
                    android:textColor="?colorPrimary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login"
                    android:layout_width="@dimen/login_components_width"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:inputType="textVisiblePassword"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/login_components_width"
                android:layout_height="1dp"
                android:background="@drawable/background_gray"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/login_components_width"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/login_components_width"
                android:layout_height="1dp"
                android:background="@drawable/background_gray"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/host_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/server_address"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/host"
                    android:layout_width="@dimen/login_components_width"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:inputType="textVisiblePassword"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DD405B"
                android:gravity="center"
                android:minWidth="@dimen/login_components_width"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_terms_and_conditions"/>


</RelativeLayout>