<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/login_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="32dp">

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit_text_selector"
                    android:drawableLeft="@drawable/ic_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_example"
                    android:inputType="textVisiblePassword"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/login_edit_text_selector"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textWebPassword"
                    android:padding="8dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DBDBDB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#F5F5F5"
                android:gravity="end"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatButton
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="#CAC6C3" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    app:backgroundTint="#1183AD" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>