<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <FrameLayout
            android:id="@+id/avatar_root"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_red">

            <TextView
                android:id="@+id/avatar_letter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="G"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="36dp" />

            <ImageView
                android:id="@id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Name"
                android:textColor="?attr/textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/first_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Name"
                android:textColor="?attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messages_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages_count"
            android:textColor="?textColorSecondary" />

        <TextView
            android:id="@+id/files_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files_count"
            android:textColor="?textColorSecondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button_hide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hide" />

    </LinearLayout>

</LinearLayout>